--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Spendlyst - Test Version</title>
 
-  <link rel="stylesheet" href="/app/Assets/style.css" />
+  <link rel="stylesheet" href="/App/Assets/style.css" />
 </head>
 
 <body>
@@ -103,6 +103,6 @@
     </main>
   </div>
 
-  <script src="/app/Assets/script.js"></script>
+  <script src="/App/Assets/script.js"></script>
 </body>
 </html>
