--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Spendlyst - Test Version</title>
 
-  <link rel="stylesheet" href="/App/Assets/style.css" />
+  <link rel="stylesheet" href="/App/Assets/styles.css" />
 </head>
 
 <body>
