--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
     </main>
   </div>
 
-  <script src="App/Assets/script.js"></script>
+  <script src="App/Assets/Script.js"></script>
 </body>
 </html>
