--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="App/Assets/styles.css">
 </head>
 
 <body>
@@ -533,6 +533,6 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="App/Assets/script.js"></script>
 </body>
 </html>
